RESOLVED FIXED136176
Rubber-banding in overflow:scroll regions does not work correctly with direction:rtl
https://bugs.webkit.org/show_bug.cgi?id=136176
Summary Rubber-banding in overflow:scroll regions does not work correctly with direct...
Beth Dakin
Reported 2014-08-22 15:51:38 PDT
Rubber-banding in overflow:scroll regions does not work correctly with direction:rtl
Attachments
Test case (457 bytes, text/html)
2014-08-22 15:52 PDT, Beth Dakin
no flags
Patch (1.88 KB, patch)
2014-08-22 16:02 PDT, Beth Dakin
sam: review+
Beth Dakin
Comment 1 2014-08-22 15:52:25 PDT
Created attachment 237004 [details] Test case Test case that shows the bug.
Beth Dakin
Comment 2 2014-08-22 16:02:32 PDT
Simon Fraser (smfr)
Comment 3 2014-08-22 16:07:30 PDT
Comment on attachment 237006 [details] Patch no tests?
Beth Dakin
Comment 4 2014-08-22 16:48:55 PDT
(In reply to comment #3) > (From update of attachment 237006 [details]) > no tests? I'm not sure that I can write a test that will actually behave differently with this change, but I will give it a shot.
Beth Dakin
Comment 5 2014-08-25 17:11:03 PDT
(In reply to comment #3) > (From update of attachment 237006 [details]) > no tests? I spent some time today trying to make a test for this, and I still have not figured out how to make a reliable test. The momentum events that Brent added are cool, but they don't seem to be 100% consistent for replicating rubber-banding.
Beth Dakin
Comment 6 2014-08-25 17:13:22 PDT
Tim Horton
Comment 7 2014-08-25 17:28:41 PDT
Comment on attachment 237006 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=237006&action=review > Source/WebCore/rendering/RenderLayer.cpp:2645 > + return IntRect(IntPoint(scrollPosition().x(), scrollPosition().y()), Why not just IntRect(scrollPosition(), ...)? No need for all this fun.
Beth Dakin
Comment 8 2014-08-25 20:31:48 PDT
(In reply to comment #7) > (From update of attachment 237006 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=237006&action=review > > > Source/WebCore/rendering/RenderLayer.cpp:2645 > > + return IntRect(IntPoint(scrollPosition().x(), scrollPosition().y()), > > Why not just IntRect(scrollPosition(), ...)? No need for all this fun. r=you to fix, Tim?
Tim Horton
Comment 9 2014-08-25 21:03:52 PDT
Absolutely!
Beth Dakin
Comment 10 2014-08-26 11:30:14 PDT
(In reply to comment #9) > Absolutely! r172965 :D
Note You need to log in before you can comment on or make changes to this bug.